<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg_backgroundddd"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher_round" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="Please Fill the Details "
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/blue_grey_800"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="To request an Account"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_900"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/txtfirstname"
                android:layout_width="359dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="?android:attr/textColorPrimaryNoDisable" />

            <EditText
                android:id="@+id/txtusername1"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="Username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="?android:attr/textColorPrimaryNoDisable" />

            <EditText
                android:id="@+id/txtpassword1"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="?android:attr/textColorPrimaryNoDisable" />

            <EditText
                android:id="@+id/txtpassword2"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="18dp"
                android:ems="10"
                android:hint="Repeat Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="?android:attr/textColorPrimaryNoDisable" />

            <EditText
                android:id="@+id/txtlastname"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/lastname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="?android:attr/textColorPrimaryNoDisable" />
            <Button
                android:id="@+id/btnok"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/colorPrimary"
                android:text="@string/ok"
                />

            <Button
                android:id="@+id/btncancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/colorAccent"
                android:text="@string/cancel"
                />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>